<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

  <LinearLayout
      android:id="@+id/linear_menu"
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/green_light"
      android:paddingHorizontal="8dp"
      android:paddingVertical="10dp" >

      <ImageView
          android:id="@+id/ic_all"
          android:contentDescription="@string/icon_all_inclusive"
          android:layout_width="42dp"
          android:layout_height="42dp"
          android:layout_weight="1"
          android:padding="8dp"
          android:src="@drawable/ic_all_inclusive"
          app:tint="@color/grey" >
      </ImageView>

      <ImageView
          android:id="@+id/ic_sunny"
          android:layout_width="42dp"
          android:layout_height="42dp"
          android:contentDescription="@string/icon_sunny"
          android:layout_weight="1"
          android:padding="8dp"
          android:src="@drawable/ic_sunny" >
      </ImageView>

      <ImageView
          android:id="@+id/ic_happy"
          android:layout_width="42dp"
          android:layout_height="42dp"
          android:layout_weight="1"
          android:contentDescription="@string/icon_happy_emoji"
          android:padding="8dp"
          android:src="@drawable/ic_happy_emoji" >
      </ImageView>

  </LinearLayout>

    <TextView
        android:id="@+id/text_view_name_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_kotlin"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="22sp"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/linear_menu" >
    </TextView>


    <TextView
        android:id="@+id/text_view_phrase_motivation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:textSize="24sp"
        android:fontFamily="@font/open_sans_semibold"
        android:layout_centerInParent="true"
        android:text="@string/movivation_phrase" >
    </TextView>

    <View
        android:id="@+id/view"
        android:layout_width="128dp"
        android:layout_height="6dp"
        android:elevation="8dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@color/green_dark"
        android:layout_below="@+id/text_view_phrase_motivation" >
    </View>


    <Button
        android:id="@+id/btn_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/green_light"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:text="@string/new_phrase"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp">
    </Button>

</RelativeLayout>